--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,4 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <script type="module">
+    import { Buffer } from 'buffer';
+    window.Buffer = Buffer;
+  </script>
 </html>
